--- a/package.json
+++ b/package.json
@@ -1,29 +1,41 @@
 {
-  "name": "adopet-api",
+  "name": "portfolio-pessoal",
   "version": "1.0.0",
-  "description": "API REST para sistema de adoção de pets com autenticação",
-  "main": "server.js",
+  "description": "Portfolio Pessoal - Sistema de Adoção de Pets com Frontend e Backend",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "jest"
+    "install:all": "npm install && cd backend && npm install && cd ../frontend && npm install",
+    "backend:install": "cd backend && npm install",
+    "frontend:install": "cd frontend && npm install",
+    "backend:start": "cd backend && npm start",
+    "backend:dev": "cd backend && npm run dev",
+    "backend:test": "cd backend && npm test",
+    "frontend:start": "cd frontend && npm start",
+    "frontend:dev": "cd frontend && npm run dev",
+    "frontend:cypress:open": "cd frontend && npm run cypress:open",
+    "frontend:cypress:run": "cd frontend && npm run cypress:run",
+    "frontend:cypress:run:lembrarSenha": "cd frontend && npm run cypress:run:lembrarSenha",
+    "frontend:cypress:run:login": "cd frontend && npm run cypress:run:login",
+    "frontend:cypress:run:loginBloqueado": "cd frontend && npm run cypress:run:loginBloqueado",
+    "frontend:cypress:run:loginInvalido": "cd frontend && npm run cypress:run:loginInvalido",
+    "dev": "concurrently \"npm run backend:dev\" \"npm run frontend:dev\"",
+    "test": "npm run backend:test && npm run frontend:cypress:run"
   },
-  "keywords": ["pets", "adoção", "api", "express", "autenticação"],
+  "keywords": [
+    "portfolio",
+    "pets",
+    "adoção",
+    "api",
+    "frontend",
+    "backend"
+  ],
   "author": "Brunna",
   "license": "MIT",
-  "dependencies": {
-    "express": "^4.18.2",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "express-rate-limit": "^7.1.5"
-  },
   "devDependencies": {
-    "nodemon": "^3.0.2",
-    "jest": "^29.7.0",
-    "supertest": "^6.3.3"
-  }
+    "concurrently": "^8.2.2"
+  },
+  "workspaces": [
+    "backend",
+    "frontend"
+  ]
 }
